# docker_manager

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
docs/: CHANGELOG.md  ROADMAP.md
docs/releases/: v0.2.0.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  router.ts  state.tsx  styles.css  types.ts  view-utils.ts
frontend/src/components/: ui.tsx
frontend/src/components/auth/: LoginScreen.tsx
frontend/src/components/header/: StatusBanner.tsx  SummaryCards.tsx  TabBar.tsx
frontend/src/components/panels/: AuditPanel.tsx  ContainersPanel.tsx  ImagesPanel.tsx  LogsPanel.tsx  NetworksPanel.tsx  VolumesPanel.tsx
frontend/src/hooks/: useContainerMutations.ts  useFilteredList.ts  useImagePullTask.ts  useLogsLoader.ts  usePagination.ts  usePersistedState.ts
